# wagtail-contact-page

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
contact_page/: apps.py  models.py
contact_page/migrations/: 0001_initial.py
contact_page/templates/contact_page/: contact_base.html  contact_page.html  contact_page_landing.html
