[tool.poetry]
name = "wagtail-contact-page"
version = "2023.1.0"
description = "ContactPage type for Wagtail"
authors = ["David Nugent <davidn@uniquode.io>"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "contact_page"}
]

[tool.poetry.dependencies]
python = ">=3.10"
django = ">=4.2"
wagtail = ">=5.0"
django-widget-tweaks = ">=1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
