[tool.poetry]
name = "wagtail-contact-page"
version = "2023.1.1"
description = "ContactPage type for Wagtail"
authors = ["David Nugent <davidn@uniquode.io>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "contact_page" }
]

[tool.poetry.dependencies]
python = ">= 3.11"
django = ">= 4.1"
wagtail = ">= 4.2, >= 5.0"
django-widget-tweaks = ">= 1.4"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
black = "^23.7.0"
isort = "^5.12.0"
ruff = "^0.0.285"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
